[package]
name = "cryptpw"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
rand = "0.10.0"
rand_core = { version = "0.6", features = ["std"] }
rusqlite = "0.39.0"

